--- a/Essence.Business/Essence.Business.csproj
+++ b/Essence.Business/Essence.Business.csproj
@@ -17,6 +17,7 @@
     <Folder Include="Exceptions\" />
     <Folder Include="Helpers\" />
     <Folder Include="Hubs\" />
+    <Folder Include="Validators\" />
   </ItemGroup>
 
   <ItemGroup>
